2007-09-03  Ludovic Courtès  <ludo@gnu.org>

	* tests/reader.test (reading)[block comment finishing sexp]: New
	test.

2007-08-23  Ludovic Courtès  <ludo@gnu.org>

	* tests/reader.test (read-options)[positions on quote]: New
	test, proposed by Kevin Ryde.

2007-08-23  Kevin Ryde  <user42@zip.com.au>

	* tests/ports.test (port-for-each): New test for passing freed cell,
	marked as unresolved since problem not yet fixed.

2007-08-11  Ludovic Courtès  <ludo@gnu.org>

	* tests/reader.test: Added a proper header and `define-module'.
	(exception:unterminated-block-comment,
	exception:unknown-character-name,
	exception:unknown-sharp-object, exception:eof-in-string,
	exception:illegal-escape, with-read-options): New.
	(reading)[block comment, unprintable symbol]: New tests.
	(exceptions): New test prefix.
	(read-options): New test prefix.

2007-08-11  Ludovic Courtès  <ludo@gnu.org>

	* tests/srfi-35.test: New file.
	* Makefile.am (SCM_TESTS): Added `tests/srfi-35.test'.

2007-08-08  Ludovic Courtès  <ludo@gnu.org>

	* tests/srfi-9.test (exception:not-a-record): Removed.
	(accessor)[get-x on number, get-y on number]: Expect
	`exception:wrong-type-arg' instead of `exception:not-a-record'.
	(modifier)[set-y! on number]: Likewise

2007-07-25  Ludovic Courtès  <ludo@gnu.org>

	* tests/srfi-17.test (%some-variable): New.
	(set!)[target uses macro]: New test prefix.  The
	"(set! (@@ ...) 1)" test is in accordance with Marius Vollmer's
	change in `libguile' dated 2003-11-17.

2007-07-18  Stephen Compall  <s11@member.fsf.org>

	* tests/syntax.test: Add SRFI-61 `cond' tests.

	* tests/srfi-37.test: New file.
	* Makefile.am: Add it.

2007-07-11  Ludovic Courtès  <ludo@gnu.org>

	* tests/goops.test (defining methods): New test prefix.

2007-07-09  Ludovic Courtès  <ludo@gnu.org>

	* tests/srfi-19.test (`time-utc->julian-day' honors timezone):
	New.  Suggested by Jon Wilson <j85wilson@fastmail.fm>.

2007-06-26  Ludovic Courtès  <ludo@gnu.org>
